Update game to 1.5. Read changes notes at site.